of the file were added first, and each subsequent addition is placed on a line
before it.
Do not hesitate to use the emacs mode Change Log for editing this file
	
--------------------------------------------------------------------------------
  v3.0.0 - (current release)
--------------------------------------------------------------------------------	
Notes:

Changes:
2008-January Franck Perignon <Franck.Perignon@inrialpes.fr>
                                                                               
	* NSSpack: split into several dir (one for each solver/formulation)
	  => create NSSTools, LCP ...
	* Add header files
	   

2007-11-12 Franck Perignon <Franck.Perignon@inrialpes.fr>
                                                                               
	* NSSPack.h: split into lcp_solvers.h, pfc_3D_solvers.h ...
	* Add utilities to handle with blocks-matrices in pfc_3D solvers
	
--------------------------------------------------------------------------------
  v2.1.1 - August, 23rd 2007 (release 839)
--------------------------------------------------------------------------------	
Notes:

Changes:
	
--------------------------------------------------------------------------------
  v2.1.0 - June, 28th 2007 (release 809)
--------------------------------------------------------------------------------	
Notes:

Changes:
		
2007-03-02 Vincent Acary <vincent,acary@inrialpes.fr>
                                                                               
	* lcp_solver : Modification of the convergence criteria
	* lcp_solver : Renaming lcp_nlgs into lcp_pgs
	* lcp_solver : Renaming lcp_sor into lcp_psor
	
--------------------------------------------------------------------------------
  v2.0.1 - December, 14th 2006 (release 626)
--------------------------------------------------------------------------------	
Notes:

Main Changes:

--------------------------------------------------------------------------------
  v2.0.0 - November, 30th 2006